--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.password=123
 
 # Swagger
 springdoc.api-docs.path=/api-docs
+
+# Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=marpetplace08@gmail.com
+spring.mail.password=rjtg vlac aift tqhi
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
