--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # JWT
 api.security.token.secret=${JWT_SECRET:12345}
+
+server.error.include-stacktrace=never
