--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 api.security.token.secret=${JWT_SECRET:12345}
 
 server.error.include-stacktrace=never
+server.forward-headers-strategy=framework
