--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,3 +22,7 @@ api.security.token.secret=${JWT_SECRET:12345}
 
 server.error.include-stacktrace=never
 server.forward-headers-strategy=framework
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
