--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/marpetplace
 spring.datasource.username=postgres
 spring.datasource.password=123
 
+spring.jpa.hibernate.ddl-auto=update
+
 # Swagger
 springdoc.api-docs.path=/api-docs
 
